@@ -37,6 +37,7 @@ if __name__ == "__main__":
         ( "filessource",   None,                 add_mod_dir, remove_mod_dir ),
         ( "gconfsource",   _("Ignore WARNINGs"), add_mod_dir, remove_mod_dir ),
         ( "paneldelegate", _("Ignore WARNINGs"), add_mod_dir, remove_mod_dir ),
+        ( "mozillasource",   None,                 add_mod_dir, remove_mod_dir ),
         ( "userprofile",   None,                 None,        None ),
         ( "userdb",        None,                 None,        None ),
         ( "cache",         None,                 None,        None )
